--- a/css/styles.css
+++ b/css/styles.css
@@ -23,6 +23,7 @@ body {
 /* NAVIGATION */
 header {
     height: 10vh;
+    z-index: 10000;
 }
 .navbar {
     position: fixed;
@@ -49,16 +50,39 @@ header {
 .story-container {
     max-width: 440px;
     margin: auto;
-    padding: 10vh 0;
-    font-family: 'Ultra', serif;
+    padding: 5vh 0;
+}
+
+.align-items-center {
+    padding: 80px 0;
+}
+
+.align-items-center h1 {
+    font-family: 'Kalam', cursive;
+    font-weight: 600;
+    color: var(--pink);
+    font-size: 40px;
+    padding-bottom: 50px;
+}
+.align-items-center p {
+    padding-bottom: 40px;
+}
+
+.img-col {
+    margin-left: 80px;
 }
 
 .btn-primary {
     background-color: var(--blue);
+}
+
+.btn-primary,
+.btn-secondary {
     border-radius: 50px;
     padding: 20px 40px;
     border: none;
     box-shadow: 2px 5px 8px rgb(156, 156, 156);
+    font-family: 'Ultra', serif;
 }
 
 .btn-primary:hover {
@@ -74,7 +98,6 @@ header {
 .images-section .btn-primary {
     align-self: flex-start;
     justify-self: center;
-    font-family: 'Ultra', serif;
 }
 
 /* FOOTER */
@@ -102,5 +125,12 @@ footer p {
     }
     .images-section .btn-primary {
         align-self: center;
+    }
+
+}
+
+@media (max-width: 600px) {
+    .img-col {
+        margin: 40px 0 0 0 ;
     }
 }
